Fix footer class name + make footer aligned to the grid

--- a/src/assets/scss/modules/_footer.scss
+++ b/src/assets/scss/modules/_footer.scss
@@ -1,5 +1,5 @@
-.footer-container {
-	@include xy-grid-container;
+.footer {
+	@include xy-grid-container($global-width);
 
 	border-top: 1px solid $medium-gray;
 	margin-top: rem-calc(60);
